# cg3-rs

./: .gitignore  AUTHORS  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.config/: nextest.toml
.config/nplan/: config.styx
.config/nspec/: config.styx
.github/workflows/: ci.yml
cg3/: CMakeLists.txt  get-boost.sh
cg3/src/: ApertiumApplicator.hpp  BinaryApplicator.hpp  CMakeLists.txt  FormatConverter.cpp  FormatConverter.hpp  cg3.h  libcg3.cpp  process.hpp  stdafx.hpp
crates/cg3/: Cargo.toml
crates/cg3/examples/: cg3-external-example.rs
crates/cg3/src/: apertium_applicator.rs  arena.rs  ast.rs  binary_applicator.rs  binary_grammar.rs  bloomish.rs  cohort.rs  cohort_iterator.rs  contextual_test.rs  error.rs  filesystem.rs  flat_unordered_map.rs  flat_unordered_set.rs  format_converter.rs  fst_applicator.rs  grammar.rs  grammar_writer.rs  icu_uoptions.rs  igrammar_parser.rs  inlines.rs  interval_vector.rs  jsonl_applicator.rs  lib.rs  math_parser.rs  matxin_applicator.rs  mwesplit_applicator.rs  niceline_applicator.rs  options.rs  options_conv.rs  options_parser.rs  parser_helpers.rs  plaintext_applicator.rs  pool.rs  process.rs  profiler.rs  reading.rs  relabeller.rs  rule.rs  scoped_stack.rs  set.rs  (+11 more)
crates/cg3/src/grammar_applicator/: context.rs  core.rs  match_set.rs  mod.rs  reflow.rs  run_contextual_test.rs  run_grammar.rs  run_rules.rs  stream_format.rs
crates/cg3/src/grammar_applicator/run_rules/: dispatch.rs  mod.rs  restructure.rs  schedule.rs  single_rule.rs  window.rs
crates/cg3/src/inlines/: hashing.rs  io.rs  misc.rs  mod.rs  scan.rs  tests.rs
crates/cg3/src/textual_parser/: driver.rs  mod.rs  rules.rs
crates/cg3/src/tools/: cg_annotate.rs  cg_comp.rs  cg_conv.rs  cg_merge_annotations.rs  cg_mwesplit.rs  cg_proc.rs  cg_relabel.rs  mod.rs  vislcg3.rs
crates/cg3/tests/: apertium.rs  applicators.rs  binary_serial.rs  engine.rs  golden.rs  grammar_parser.rs  model_core.rs  profiler_relabeller.rs  tools_cli.rs
crates/cg3/tests/common/: mod.rs
docs/engine-decomp/: field-triage.md
docs/spec/port/src/: AST.md  ApertiumApplicator.md  BinaryApplicator.md  BinaryGrammar.md  BinaryGrammar_read.md  BinaryGrammar_write.md  Cohort.md  CohortIterator.md  ContextualTest.md  FSTApplicator.md  FormatConverter.md  Grammar.md  GrammarApplicator.md  GrammarApplicator_context.md  GrammarApplicator_matchSet.md  GrammarApplicator_reflow.md  GrammarApplicator_runContextualTest.md  GrammarApplicator_runGrammar.md  GrammarApplicator_runRules.md  GrammarWriter.md  IGrammarParser.md  JsonlApplicator.md  MathParser.md  MatxinApplicator.md  MweSplitApplicator.md  NicelineApplicator.md  PlaintextApplicator.md  Profiler.md  Reading.md  Relabeller.md  Rule.md  Set.md  SingleWindow.md  Strings.md  Tag.md  TagTrie.md  TextualParser.md  Window.md  bloomish.md  cg-annotate.md  (+24 more)
examples/: mwesplit.rs
plan/: .port-manifest.styx  .quality-baseline.styx  .state.styx  main.styx
src/: lib.rs
test/T_External/: grammar.cg3
wrapper/: wrapper.cpp  wrapper.hpp
