[package]
name = "cg3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.50"
cc = "1.0.79"
pkg-config = "0.3.27"
vcpkg = "0.2.15"

[dependencies]
thiserror = "1.0.56"


