[package]
name = "cg3"
version = "0.0.0"
edition = "2024"
description = "VISL CG-3 (Constraint Grammar) engine — Rust port"
license = "GPL-3.0-or-later"

[lib]
name = "cg3"
path = "src/lib.rs"

[dependencies]
# UTF-8 + regex-crate (Unicode by default) replaces ICU's uregex; parity-checked
# per the porting notes.
regex = "1"
# JSONL applicator (replaces RapidJSON) and profiler (replaces the C sqlite3 API).
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
