[package]
name = "cg3"
version = "0.1.0"
edition = "2024"
description = "VISL CG-3 (Constraint Grammar) engine — Rust port"
license = "GPL-3.0-or-later"

[lib]
name = "cg3"
path = "src/lib.rs"

[dependencies]
# UTF-8 + regex-crate (Unicode by default) replaces ICU's uregex; parity-checked
# per the porting notes.
regex = "1"
# JSONL applicator (replaces RapidJSON) and profiler (replaces the C sqlite3 API).
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
# All diagnostics/logging (the C++ ux_stderr/std::cerr messages) are tracing
# events; the binaries install a stderr subscriber.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
# Typed bit-flag sets (T_*/ST_*/CT_*/RF_*/POS_* families) per the sanctioned idiom list.
bitflags = "2"

[dev-dependencies]
# The conformance harness (tests/golden.rs, tests/apertium.rs) uses regex for the
# ported cg-untrace / cg-sort / cg-stabilize-relations stream filters.
regex = "1"
