[package]
name = "cg3"
version = "0.1.1"
edition = "2024"
description = "VISL CG-3 (Constraint Grammar) engine — Rust port"
license = "GPL-3.0-or-later"
repository = "https://github.com/divvun/cg3-rs"
homepage = "https://github.com/divvun/cg3-rs"
readme = "README.md"
keywords = ["constraint-grammar", "nlp", "linguistics", "cg3"]
categories = ["text-processing"]

[lib]
name = "cg3"
path = "src/lib.rs"

# The two profiling-report tools are the only SQLite consumers; they build only
# with the `profiler` feature (the other six binaries auto-discover as usual).
[[bin]]
name = "cg-annotate"
path = "src/bin/cg-annotate.rs"
required-features = ["profiler"]

[[bin]]
name = "cg-merge-annotations"
path = "src/bin/cg-merge-annotations.rs"
required-features = ["profiler"]

[features]
default = []
# `vislcg3 --profile` plus the cg-annotate / cg-merge-annotations report tools,
# which persist to a SQLite database via rusqlite (bundled SQLite). Off by
# default so the base build pulls in no C toolchain / SQLite.
profiler = ["dep:rusqlite"]

[dependencies]
# UTF-8 + regex-crate (Unicode by default) replaces ICU's uregex; parity-checked
# per the porting notes.
regex = "1"
# JSONL applicator (replaces RapidJSON).
serde_json = "1"
# Profiler DB (replaces the C sqlite3 API) — only pulled in by the `profiler` feature.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# All diagnostics/logging (the C++ ux_stderr/std::cerr messages) are tracing
# events; the binaries install a stderr subscriber.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
# Typed bit-flag sets (T_*/ST_*/CT_*/RF_*/POS_* families) per the sanctioned idiom list.
bitflags = "2"

[dev-dependencies]
# The conformance harness (tests/golden.rs, tests/apertium.rs) uses regex for the
# ported cg-untrace / cg-sort / cg-stabilize-relations stream filters.
regex = "1"
